# game_of_life_mpi

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  plot_drawer.py  run.sh
